--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Sampark
 server.port=1234
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/user
+spring.datasource.url=jdbc:postgresql://localhost:5432/Sampark
 spring.datasource.username=postgres
 spring.datasource.password=0000
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
